--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -60,8 +60,10 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:1234@localhost/learn
+# sqlalchemy.url = postgresql://postgres:1234@localhost/learn
 
+# Add this line to load environment variables
+sqlalchemy.url = %(DATABASE_URL)s
 
 
 [post_write_hooks]
