--- a/ui/package.json
+++ b/ui/package.json
@@ -12,9 +12,14 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
+    "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
     "@types/node": "^20",
