--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.20",
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.6",
