env file update

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:1234@localhost/learn
+DATABASE_URL=postgresql://postgres:1234@localhost/test
 SECRET_KEY=abhi_passcode_python
