--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -60,10 +60,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# sqlalchemy.url = postgresql://postgres:1234@localhost/learn
-
 # Add this line to load environment variables
-sqlalchemy.url = %(DATABASE_URL)s
+sqlalchemy.url = %(DATABASE_URL)
 
 
 [post_write_hooks]
